--- a/Promise.html
+++ b/Promise.html
@@ -48,21 +48,41 @@
             }
 
             then(onFufilled, onRejected) {
-                if (this.status === FUFILLED) {
-                    onFufilled(this.value)
-                }
-                if (this.status === REJECTED) {
-                    onRejected(this.reson)
-                }
-                if (this.status === PENDING) {
-                    this.onFufilledCallback.push(() => {
-                        onFufilled(this.value)
-                    })
-                    this.onRejectedCallback.push(() => {
-                        onRejected(this.reson)
-                    })
-                }
+
+                const p2 = new Promise((resolve, reject) => {
+                    if (this.status === FUFILLED) {
+                        try {
+                            onFufilled(this.value)
+                        } catch (error) {
+                            reject(error)
+                        }
+                    }
+                    if (this.status === REJECTED) {
+                        try {
+                            onRejected(this.reson)
+                        } catch (error) {
+                            reject(error)
+                        }
+                    }
+                    if (this.status === PENDING) {
+                        this.onFufilledCallback.push(() => {
+                            try {
+                                onFufilled(this.value)
+                            } catch (error) {
+                                reject(error)
+                            }
+                        })
+                        this.onRejectedCallback.push(() => {
+                            try {
+                                onRejected(this.reson)
+                            } catch (error) {
+                                reject(error)
+                            }
+                        })
+                    }
+                })
             }
+
         }
         const p = new Promise((resolve, reject) => {
             setTimeout(() => {
